# immerda_scraper

./: .gitignore  README.md  pyproject.toml
analysis/: analysis.py
immerda_scraper/: faulty.py  get_faulty.py  hzr.py  match_to_registered.py  overview.py  scraper.py  shift_overview.py
