[tool.poetry]
name = "immerda_scraper"
version = "0.1.0"
description = ""
authors = [""]
readme = "README.md"
packages = [{include = "immerda_scraper"}]

[tool.poetry.dependencies]
python = "^3.8"
beautifulsoup4 = "^4.12.2"
requests = "^2.31.0"
pandas = "^2.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
