[project]
name = "immerda-scraper"
version = "0.1.0"
description = ""
authors = [{name = "KilianZimmerer"}]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "beautifulsoup4>=4.12.2",
    "requests>=2.31.0",
    "pandas>=2.0.1",
    "openpyxl>=3.1.3",
    "xlsxwriter>=3.2.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
